unpackaged/main/default/objects/Credit_Note__c/fields/Amount_Exc_VAT__c.field-meta.xml
<CustomField>
    <fullName>Amount_Exc_VAT__c</fullName>
    <label>Amount Exc. VAT</label>
    <summarizedField>Credit_Note_Line__c.List_Price__c</summarizedField>
    <summaryForeignKey>Credit_Note_Line__c.Credit_Note__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>