unpackaged/main/default/objects/Credit_Note__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Credit Notes</relationshipLabel>
    <relationshipName>Credit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>