unpackaged/main/default/objects/Credit_Note__c/fields/Credit_Note_Details__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Details__c</fullName>
    <label>Credit Note Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>