unpackaged/main/default/objects/Credit_Note__c/fields/Credit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credit_Reason__c</fullName>
    <label>Credit Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Invoice Error</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>