unpackaged/main/default/objects/Credit_Note__c/fields/FF_Code__c.field-meta.xml
<CustomField>
    <fullName>FF_Code__c</fullName>
    <formula>Application__r.Head_Office__r.Sage_50_Customer_A_C__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FF Code</label>
    <type>Text</type>
</CustomField>