unpackaged/main/default/objects/Credit_Note__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <formula>Application__r.Payment_Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Number</label>
    <type>Text</type>
</CustomField>