unpackaged/main/default/objects/Credit_Note__c/fields/Tax_Point_Date__c.field-meta.xml
<CustomField>
    <fullName>Tax_Point_Date__c</fullName>
    <description>Date of credit note creation.</description>
    <inlineHelpText>Date of credit note creation.</inlineHelpText>
    <label>Tax Point Date</label>
    <type>Date</type>
</CustomField>