unpackaged/main/default/objects/Credit_Note__c/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <formula>Amount_Exc_VAT__c * 0.2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>