unpackaged/main/default/objects/Credit_Note__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Membership_Number__c</columns>
    <columns>Account__c</columns>
    <columns>Application__c</columns>
    <columns>Amount_Inc_VAT__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Leadership</group>
    </sharedTo>
</ListView>